--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                     <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
+            <button class="burger-btn" type="button">
+                <svg class="burger-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-burger"></use>
+                </svg>
+            </button>
         </div>
         </header>
     <main>
@@ -351,7 +356,7 @@
                     solutions.</p>
             </div>
                 
-                <div>
+                <div class="soc-media-box">
                     <p class="soc-media">Social media</p>
                     <ul class="footer-link-list">
                         <li class="footer-link-item">
@@ -399,7 +404,7 @@
                 </div>
         </div>
     </footer>
-    <div class="backdrop" data-modal>
+    <div class="backdrop hidden" data-modal>
         <div class="modal">
             <button class="button-close" type="button" data-modal-close>
                 <svg class="icon-close" width="8" height="8">
