--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
-            <button class="burger-btn" type="button">
+            <button class="burger-btn" type="button" data-menu-open>
                 <svg class="burger-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-burger"></use>
                 </svg>
@@ -404,7 +404,7 @@
                 </div>
         </div>
     </footer>
-    <div class="backdrop hidden" data-modal>
+    <div class="backdrop" data-modal>
         <div class="modal">
             <button class="button-close" type="button" data-modal-close>
                 <svg class="icon-close" width="8" height="8">
@@ -451,12 +451,73 @@
                             <svg class="form-checkbox-icon" width="10" height="8">
                               <use href="./images/icons.svg#icon-icon-check"></use>
                             </svg>
-                         </span>I accept the terms and conditions of the <a class="form-privacy-policy" href="">Privacy Policy</a></label>
+                         </span><span>I accept the terms and conditions of the <a class="form-privacy-policy" href="">Privacy Policy</a></span></label>
                 </div>
                     <button class="form-button" id="form-btn" type="submit">Send</button>
             </form>
             </div>
         </div>
+<div class="backdrop-mobile-menu" data-menu>
+    <div class="menu-mobile">
+        <button class="button-close-mobile" type="button" data-menu-close>
+            <svg class="icon-close" width="8" height="8">
+                <use href="./images/icons.svg#icon-icon-close"></use>
+            </svg>
+        </button>
+        <nav class="mobile-nav">
+            <ul class="mobile-nav-list">
+                <li class="mobile-nav-item">
+                    <a class="mobile-nav-link mob-color" href="./index.html">Studio</a>
+                </li>
+                <li class="mobile-nav-item">
+                    <a class="mobile-nav-link" href="">Portfolio</a>
+                </li>
+                <li class="mobile-nav-item">
+                    <a class="mobile-nav-link" href="">Contacts</a>
+                </li>
+            </ul>
+        </nav>
+        <address class="mob-menu-contacts">
+            <ul class="mob-menu-contacts-list">
+                <li class="mob-menu-contacts-item"><a class="mob-menu-contacts-link mob-color" href="tel:+110001111111">+11
+                        (000) 111-11-11</a></li>
+                <li class="mob-menu-contacts-item"><a class="mob-menu-contacts-link"
+                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            </ul>
+        </address>
+        <ul class="mob-icon-list">
+            <li class="mob-icon">
+                <a class="mob-icon-link" href="https://www.instagram.com/" target="_blank">
+                    <svg class="svg-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="mob-icon">
+                <a class="mob-icon-link" href="https://twitter.com/" target="_blank">
+                    <svg class="svg-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="mob-icon">
+                <a class="mob-icon-link" href="https://uk-ua.facebook.com/" target="_blank">
+                    <svg class="svg-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="mob-icon">
+                <a class="mob-icon-link" href="https://ua.linkedin.com/" target="_blank">
+                    <svg class="svg-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
+</div> 
     <script src="./js/modal.js" ></script>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
